--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,8 +1,8 @@
 <form class="ui form" [formGroup]="form" novalidate (ngSubmit)="onSubmit(form.value)">
   <div class="inline fields">
     <div class="three wide field">
-      <select formControlName='table'>
-        <option *ngFor="let name of tableArray;" [ngValue]="name">{{name}}</option>
+      <select formControlName='table' class="ui search dropdown">
+        <option *ngFor="let name of tableArray;" value="{{name}}">{{name}}</option>
       </select>
     </div>
     <div class="field eleven wide">
