--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -34,12 +34,12 @@
                 <span class="border-circle" id="last-page" #lastPage (click)="onChangePage(lastPage.id)">
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>
                 </span>
-                <select name="" id="">
-                    <option value="">10</option>
-                    <option value="">20</option>
-                    <option value="">50</option>
-                    <option value="">100</option>
-                    <option value="">500</option>
+                <select name="" #pageSize>
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="50">50</option>
+                    <option value="100">100</option>
+                    <option value="500">500</option>
                 </select>
             </div>
         </div>
