--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,7 +1,7 @@
 <form class="ui form" [formGroup]="form" novalidate (ngSubmit)="onSubmit(form.value)">
   <div class="inline fields">
     <div class="three wide field">
-      <select formControlName='table' class="ui" id="catalogueSelection">
+      <select formControlName='table' class="ui" id="catalogueSelection" (change)="onChange($event.target)">
         <option *ngFor="let option of selection;" data-id="catalogueId={{option.id}}&tableName={{option.tableName}}">{{option.tableNameCH}}</option>
       </select>
     </div>
