--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,7 +2,7 @@
   <div class="inline fields">
     <div class="three wide field">
       <select formControlName='table' class="ui" id="catalogueSelection" (change)="onChange($event.target)">
-        <option *ngFor="let option of selection;" data-id="catalogueId={{option.id}}&tableName={{option.tableName}}">{{option.tableNameCH}}</option>
+        <option *ngFor="let option of selection;" data-id="catalogueId={{option.id}}&tableName={{option.other}}">{{option.name}}</option>
       </select>
     </div>
     <div class="field eleven wide">
