需要安装ueditor,完成所有模块功能

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
-<app-cover></app-cover>
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div id="background" style=" background-image: url( '../../assets/newnewnewTeminal/background.png'); background-repeat:
+    no-repeat; height: 100%; background-position: center; background-size: cover; overflow: hidden;">
+    <app-cover></app-cover>
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
 
-<!--所有模态框-->
-<app-rating-modal></app-rating-modal>
+    <!--所有模态框-->
+    <app-rating-modal></app-rating-modal>
+
+</div>
