--- a/src/app/current-file/current-file.component.html
+++ b/src/app/current-file/current-file.component.html
@@ -1,6 +1,6 @@
 <!--现行文件服务 start-->
 <section>
-  <div class="ui container">
+  <div class="ui container custom-container-width">
     <div id="currentFileService">
       <app-form [selection]="selection" (pagerInfo)="onGetPagerInfo($event)"></app-form>
 
