--- a/src/app/open-file-receive/open-file-receive.component.html
+++ b/src/app/open-file-receive/open-file-receive.component.html
@@ -1,10 +1,10 @@
 <!--开放档案服务 start-->
 <section>
-    <div class="ui container" id="content-container">
+    <div class="ui container custom-container-width" id="content-container">
         <div id="openFileService">
             <!--表单 start-->
-            <app-form [selection]="selection" (pagerInfo)="onGetPagerInfo($event)" ></app-form>
-            
+            <app-form [selection]="selection" (pagerInfo)="onGetPagerInfo($event)"></app-form>
+
             <!--表单 end-->
 
             <app-table [gridContentArray]="gridContentArray" [pagerInfo]="pagerInfo"></app-table>
