--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,13 +1,17 @@
 /* 导航条样式 */
 
 #navbar {
-    background: #1681d3;
+    background: linear-gradient(45deg, rgba(25, 138, 255, 0), rgba(57, 121, 236, 0));
+    height: 170px;
+    border: none;
+    box-shadow: 0 0 0;
 }
 
 #logo-name {
-    font-size: 1.2rem;
+    font-size: 2.2rem;
     margin-left: 5px;
     color: #fff;
+    text-shadow: 5px 5px 5px #565656;
 }
 
 #navbar>div.container a {
@@ -18,4 +22,20 @@
     display: flex;
     flex-direction: row;
     margin-left: auto;
+}
+
+#link-container a {
+    display: flex;
+    flex-direction: column;
+}
+
+#link-container a img {
+    width: 120px;
+}
+
+#link-container a span {
+    margin-top: 5px;
+    font-size: 16px;
+    text-shadow: 5px 5px 5px #222222;
+    font-weight: bold;
 }
