--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <!--导航 start-->
 <nav>
-  <div class="ui menu fixed pointing " id="navbar">
+  <div class="ui menu  pointing " id="navbar">
     <div class="ui container fluid">
       <a [routerLink]="['/openFile']" class="header item">
         <img src="../../assets/img/2.ico" class="logo-image" alt="" srcset="">
