--- a/src/app/open-file-receive/open-file-receive.component.html
+++ b/src/app/open-file-receive/open-file-receive.component.html
@@ -1,6 +1,6 @@
 <!--开放档案服务 start-->
 <section>
-    <div class="ui container custom-container-width" id="content-container">
+    <div class="ui container sixteen wide custom-container-width" id="content-container">
         <div id="openFileService">
             <!--表单 start-->
             <app-form [selection]="selection" (errorMsg)="onGetErrorMsg($event)" (pagerInfo)="onGetPagerInfo($event)"></app-form>
