--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -45,6 +45,27 @@
     margin-right: 1rem;
 }
 
+#currentPage+span {
+    margin-left: 1rem;
+}
+
+@media screen and (max-width:1200px) {
+    .sperator::after {
+        content: "|";
+        width: 1px;
+        font-size: 1rem;
+        color: #ccc;
+        margin-left: .1rem;
+        margin-right: .1rem;
+    }
+    .border-circle {
+        margin-right: .5rem;
+    }
+    #currentPage+span {
+        margin: .1rem;
+    }
+}
+
 input {
     width: 30px;
     border: 1px solid #ccc;
