--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,5 +1,5 @@
 <div id="gridContainer">
-    <table class="ui celled table" id="jqGrid">
+    <table id="jqGrid">
 
     </table>
 
@@ -23,7 +23,7 @@
                 <span>
                     第
                     <input type="text" value="1" #currentPage id="currentPage"> 页
-                    <span style="margin-left:1rem;">共
+                    <span>共
                         <span id="totalPage"> {{totalPage}} </span>页</span>
                 </span>
 
