--- a/src/app/archivecompilationservice/archivecompilationservice.component.html
+++ b/src/app/archivecompilationservice/archivecompilationservice.component.html
@@ -3,6 +3,12 @@
   <div class="ui container custom-container-width">
     <!-- <img src="../../assets/newnewnewTeminal/checkFile.png" style="width:120px;" (click)="onCheckArchiveFile()" alt="" srcset=""> -->
     <button type="button" (click)="onCheckArchiveFile()" class="ui button  medium">查看编研文件</button>
+    <form class="ui form"  id="search-form">
+      <div class="inline field">
+        <input type="text" placeholder="输入检索内容" name="keyWord" #keyWord>
+        <button type="button" class="ui button" (click)="search(keyWord.value)">检索</button>
+      </div>
+    </form>
     <div style="margin-top:2rem">
       <app-table [gridContentArray]="gridContentArray" [pagerInfo]="pagerInfo"></app-table>
     </div>
