--- a/src/app/cover/cover.component.html
+++ b/src/app/cover/cover.component.html
@@ -1,6 +1,6 @@
 <div class="ui segment" id="segment">
   <div class="ui active dimmer">
-    <div class="ui massive text loader">加载中</div>
+    <div class="ui massive inverted text loader">加载中</div>
   </div>
   <p></p>
   <p></p>
