--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 <nav>
   <div class="ui menu  pointing " id="navbar">
     <div class="ui container fluid">
-      <a [routerLink]="['/openFile']" class="header item">
+      <a class="header item">
         <img src="../../assets/img/2.ico" class="logo-image" alt="" srcset="">
         <span id="logo-name"> 澄海区档案局电子文档数据中心
           <span style="margin-left:1rem">查询终端</span>
