--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -35,7 +35,7 @@
                 <span class="border-circle" id="last-page" #lastPage (click)="onChangePage(lastPage.id)">
                     <i class="fa fa-angle-double-right" aria-hidden="true"></i>
                 </span>
-                <select name="" #pageSize (change)="onChangePageSize(pageSize)">
+                <select name="pageSize" #pageSize (change)="onChangePageSize(pageSize)">
                     <option value="10">10</option>
                     <option value="20">20</option>
                 </select>
