针对平板电脑浏览进行优化

--- a/src/app/archivecompilationservice/archivecompilationservice.component.html
+++ b/src/app/archivecompilationservice/archivecompilationservice.component.html
@@ -5,11 +5,11 @@
     <div>
       <form class="ui form" id="search-form">
         <div class="inline fields">
-          <div class="thirteen wide field">
+          <div class="twelve wide field">
             <input type="text" placeholder="输入检索内容" name="keyWord" #keyWord>
           </div>
-          <button type="button" class="ui button" (click)="search(keyWord.value)">检索</button>
-          <button type="button" (click)="onCheckArchiveFile()" class="ui button  medium">查看编研文件</button>
+          <button type="button" class="ui button tiny" (click)="search(keyWord.value)">检索</button>
+          <button type="button" (click)="onCheckArchiveFile()" class="ui button tiny">查看编研文件</button>
         </div>
       </form>
     </div>
