--- a/src/app/open-file-receive/open-file-receive.component.html
+++ b/src/app/open-file-receive/open-file-receive.component.html
@@ -3,7 +3,8 @@
     <div class="ui container sixteen wide custom-container-width" id="content-container">
         <div id="openFileService">
             <!--表单 start-->
-            <app-form [selection]="selection" (errorMsg)="onGetErrorMsg($event)" (pagerInfo)="onGetPagerInfo($event)"></app-form>
+            <app-form [selection]="selection" (errorMsg)="onGetErrorMsg($event)" (pagerInfo)="onGetPagerInfo($event)" [dianziwenjianEn]="dianziwenjianEn"
+                [tableName]="tableName"></app-form>
 
             <!--表单 end-->
 
