--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,4 +1,5 @@
 <div id="gridContainer">
+    <input type="text" hidden value='{{dianziwenjianEn}}' id="dianziwenjianEn" />
     <table id="jqGrid">
 
     </table>
