--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -12,7 +12,7 @@
       <button class="ui button" type="submit">检索</button>
     </div>
     <div class="field two wide">
-      <button class="ui button" type="button" (click)="onCheckEDCFile()">查看电子文件</button>
+      <button class="ui button" type="button" [class.hidden]="EDCBtnShow" (click)="onCheckEDCFile()">查看电子文件</button>
     </div>
   </div>
 </form>
